--- a/css/styles.css
+++ b/css/styles.css
@@ -3,37 +3,37 @@
 
 /* css variables */
 :root {
-  --primarycolor: #3fd0d4;
-  --mainwhite: #fff;
-  --offwhite: #f7f7f7;
-  --mainblack: #222;
-  --maingrey: #ececec;
-  --darkgrey: #afafaf;
-  --maintransition: all 0.3s linear;
-  --mainspacing: 0.25rem;
-  --lightshadow: 2px 5px 3px 0 rgba(0, 0, 0, 0.25);
-  --darkshadow: 4px 10px 5px 0 rgba(0, 0, 0, 0.5);
+    --primarycolor: #3fd0d4;
+    --mainwhite: #fff;
+    --offwhite: #f7f7f7;
+    --mainblack: #222;
+    --maingrey: #ececec;
+    --darkgrey: #afafaf;
+    --maintransition: all 0.3s linear;
+    --mainspacing: 0.25rem;
+    --lightshadow: 2px 5px 3px 0 rgba(0, 0, 0, 0.25);
+    --darkshadow: 4px 10px 5px 0 rgba(0, 0, 0, 0.5);
 }
 /* reset */
 *,
 ::before,
 ::after {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
 }
 /* body */
 body {
-  font-family: "Lato", sans-serif;
-  color: var(--mainblack);
-  background: var(--offwhite);
-  line-height: 1.4;
-  font-size: 1rem;
+    font-family: "Lato", sans-serif;
+    color: var(--mainblack);
+    background: var(--offwhite);
+    line-height: 1.4;
+    font-size: 1rem;
 }
 /******************** global styles *******************/
-img {
-  width: 100%;
-  display: block;
+img:not(.nav-logo) {
+    width: 100%;
+    display: block;
 }
 h1,
 h2,
@@ -41,327 +41,509 @@ h3,
 h4,
 h5,
 h6 {
-  font-family: "Poppins", sans-serif;
-  margin-bottom: 1.25rem;
-  letter-spacing: var(--mainspacing);
+    font-family: "Poppins", sans-serif;
+    margin-bottom: 1.25rem;
+    letter-spacing: var(--mainspacing);
 }
 h1 {
-  font-size: 3.3rem;
+    font-size: 3.3rem;
 }
 h2 {
-  font-size: 2.3rem;
+    font-size: 2.3rem;
 }
 h3 {
-  font-size: 2rem;
+    font-size: 2rem;
 }
 h4 {
-  font-size: 1.2rem;
+    font-size: 1.2rem;
 }
 p {
-  margin-bottom: 1.25rem;
-  line-height: 2;
-  font-weight: 300;
+    margin-bottom: 1.25rem;
+    line-height: 2;
+    font-weight: 300;
 }
 a {
-  text-decoration: none;
+    text-decoration: none;
 }
 /* more global styles */
 /* buttons */
 .btn-white,
 .btn-primary {
-  text-transform: uppercase;
-  color: var(--mainwhite);
-  border: 2px solid var(--mainwhite);
-  letter-spacing: var(--mainspacing);
-  padding: 0.9rem 1.6rem;
-  display: inline-block;
-  transition: var(--maintransition);
-  cursor: pointer;
+    text-transform: uppercase;
+    color: var(--mainwhite);
+    border: 2px solid var(--mainwhite);
+    letter-spacing: var(--mainspacing);
+    padding: 0.9rem 1.6rem;
+    display: inline-block;
+    transition: var(--maintransition);
+    cursor: pointer;
 }
 .btn-white:hover {
-  background: var(--mainwhite);
-  color: var(--primarycolor);
+    background: var(--mainwhite);
+    color: var(--primarycolor);
 }
 /* btn primary */
 .btn-primary {
-  background: var(--primarycolor);
-  color: var(--mainwhite);
-  border-color: var(--primarycolor);
+    background: var(--primarycolor);
+    color: var(--mainwhite);
+    border-color: var(--primarycolor);
 }
 .btn-primary:hover {
-  background: transparent;
-  color: var(--primarycolor);
+    background: transparent;
+    color: var(--primarycolor);
 }
 /* section */
 .section {
-  padding: 5rem 0;
+    padding: 5rem 0;
 }
 /* title */
 .title-wrapper {
-  margin-bottom: 2rem;
+    margin-bottom: 2rem;
 }
 .title {
-  text-align: center;
-  text-transform: uppercase;
-  font-size: 2.6rem;
-  letter-spacing: 0.5rem;
+    text-align: center;
+    text-transform: uppercase;
+    font-size: 2.6rem;
+    letter-spacing: 0.5rem;
 }
 .subtitle {
-  color: var(--primarycolor);
+    color: var(--primarycolor);
 }
 /* section center */
 .section-center {
-  width: 85vw;
-  margin: 4rem auto 2rem auto;
-  max-width: 1170px;
+    width: 85vw;
+    margin: 4rem auto 2rem auto;
+    max-width: 1170px;
 }
 /******************** end of global styles *******************/
 /******************** nav bar *******************/
 /******************** end of nav bar****************/
 /******************** hero project *******************/
 .hero {
-  min-height: 100vh;
-  background: var(--primarycolor);
-  display: flex;
-  justify-content: center;
-  align-items: center;
+    min-height: calc(100vh - 62px);
+    background: var(--primarycolor);
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 .hero-banner {
-  text-align: center;
-  color: var(--mainwhite);
-  padding: 0 2rem;
+    text-align: center;
+    color: var(--mainwhite);
+    padding: 0 2rem;
 }
 .hero-title {
-  text-transform: uppercase;
-  margin-bottom: 2rem;
-  letter-spacing: 0.4rem;
+    text-transform: uppercase;
+    margin-bottom: 2rem;
+    letter-spacing: 0.4rem;
 }
 .hero-text {
-  width: 85%;
-  margin: 0 auto;
-  letter-spacing: var(--mainspacing);
-  font-weight: 400;
-  margin-bottom: 2rem;
+    width: 85%;
+    margin: 0 auto;
+    letter-spacing: var(--mainspacing);
+    font-weight: 400;
+    margin-bottom: 2rem;
 }
 @media screen and (min-width: 768px) {
-  .hero {
-    background: linear-gradient(rgba(63, 208, 212, 0.7), rgba(0, 0, 0, 0.7)),
-      url(../images/main.jpeg) center/cover no-repeat fixed;
-  }
-  .hero-title {
-    font-size: 4.5rem;
-  }
-  .hero-text {
-    width: 70%;
-  }
+    .hero {
+        background: linear-gradient(rgba(63, 208, 212, 0.7), rgba(0, 0, 0, 0.7)),
+            url(../images/main.jpeg) center/cover no-repeat fixed;
+    }
+    .hero-title {
+        font-size: 4.5rem;
+    }
+    .hero-text {
+        width: 70%;
+    }
 }
 /******************** end of hero project *******************/
 /******************** about *******************/
 .about {
-  background: var(--mainwhite);
+    background: var(--mainwhite);
 }
 /* section added to the globals */
 /* title added to the globals */
 /* section center added to the globals */
 .about-img,
 .about-info {
-  margin-bottom: 4rem;
+    margin-bottom: 4rem;
 }
 .about-info h3 {
-  text-transform: uppercase;
+    text-transform: uppercase;
 }
 @media screen and (min-width: 992px) {
-  .about-center {
-    display: flex;
-    justify-content: space-between;
-  }
-  .about-img,
-  .about-info {
-    flex: 0 0 calc(50% - 2rem);
-    margin-bottom: 0;
-    align-self: center;
-  }
+    .about-center {
+        display: flex;
+        justify-content: space-between;
+    }
+    .about-img,
+    .about-info {
+        flex: 0 0 calc(50% - 2rem);
+        margin-bottom: 0;
+        align-self: center;
+    }
 }
 @media screen and (min-width: 1170px) {
-  .about-img::before {
-    content: "";
-    position: absolute;
-    width: 100%;
-    height: 100%;
-    border: 0.5rem solid var(--primarycolor);
-    top: -1.5rem;
-    left: -1.5rem;
-  }
-  .about-img {
-    position: relative;
-  }
-  .about-photo {
-    position: relative;
-  }
+    .about-img::before {
+        content: "";
+        position: absolute;
+        width: 100%;
+        height: 100%;
+        border: 0.5rem solid var(--primarycolor);
+        top: -1.5rem;
+        left: -1.5rem;
+    }
+    .about-img {
+        position: relative;
+    }
+    .about-photo {
+        position: relative;
+    }
 }
 /******************** end of about *******************/
 /******************** services *******************/
 .service {
-  text-align: center;
-  margin-bottom: 3rem;
+    text-align: center;
+    margin-bottom: 3rem;
 }
 .service-icon {
-  background: var(--primarycolor);
-  padding: 0.5rem;
-  display: inline-block;
-  font-size: 2rem;
-  margin-bottom: 1.5rem;
+    background: var(--primarycolor);
+    padding: 0.5rem;
+    display: inline-block;
+    font-size: 2rem;
+    margin-bottom: 1.5rem;
 }
 .service-title {
-  text-transform: uppercase;
+    text-transform: uppercase;
 }
 .service-text {
-  width: 80%;
-  margin: 0 auto;
-  line-height: 1.5;
+    width: 80%;
+    margin: 0 auto;
+    line-height: 1.5;
 }
 @media screen and (min-width: 576px) {
-  .services-center {
-    display: flex;
-    /* after */
-    flex-wrap: wrap;
-    justify-content: space-between;
-  }
-  .service {
-    flex: 0 0 calc(50% - 1rem);
-  }
+    .services-center {
+        display: flex;
+        /* after */
+        flex-wrap: wrap;
+        justify-content: space-between;
+    }
+    .service {
+        flex: 0 0 calc(50% - 1rem);
+    }
 }
 @media screen and (min-width: 992px) {
-  .service {
-    flex: 0 0 calc(33.33333% - 1rem);
-  }
+    .service {
+        flex: 0 0 calc(33.33333% - 1rem);
+    }
 }
 @media screen and (min-width: 1170px) {
-  .service {
-    display: flex;
-    text-align: left;
-  }
-  .service-icon {
-    align-self: start;
-  }
-  .service-info {
-    padding-left: 1rem;
-    margin-bottom: 0.5rem;
-  }
-  .service-text {
-    width: 90%;
-    margin: 0;
-  }
+    .service {
+        display: flex;
+        text-align: left;
+    }
+    .service-icon {
+        align-self: start;
+    }
+    .service-info {
+        padding-left: 1rem;
+        margin-bottom: 0.5rem;
+    }
+    .service-text {
+        width: 90%;
+        margin: 0;
+    }
 }
 
 /******************** end of services *******************/
 /******************** featured tours *******************/
 .featured {
-  background: var(--mainwhite);
+    background: var(--mainwhite);
 }
 .tour-card {
-  margin-bottom: 4rem;
-  box-shadow: var(--lightshadow);
-  transition: var(--maintransition);
+    margin-bottom: 4rem;
+    box-shadow: var(--lightshadow);
+    transition: var(--maintransition);
 }
 .tour-card:hover {
-  box-shadow: var(--darkshadow);
+    box-shadow: var(--darkshadow);
 }
 .tour-img-container {
-  position: relative;
+    position: relative;
 }
 .tour-date {
-  position: absolute;
-  top: 0;
-  left: 0;
-  text-transform: capitalize;
-  background: var(--primarycolor);
-  padding: 0.25rem 0.5rem;
+    position: absolute;
+    top: 0;
+    left: 0;
+    text-transform: capitalize;
+    background: var(--primarycolor);
+    padding: 0.25rem 0.5rem;
 }
 .tour-footer {
-  padding: 1.2rem 1.5rem;
+    padding: 1.2rem 1.5rem;
 }
 .tour-title {
-  text-transform: capitalize;
+    text-transform: capitalize;
 }
 .tour-country {
-  color: var(--primarycolor);
-  text-transform: capitalize;
+    color: var(--primarycolor);
+    text-transform: capitalize;
 }
 .tour-info {
-  display: flex;
-  justify-content: space-between;
-  flex-wrap: wrap;
-}
-.tour-details p {
-  line-height: 0.2;
-  letter-spacing: 0.02rem;
-  color: var(--darkgrey);
-  text-transform: capitalize;
-}
-.tour-country {
-  align-self: center;
-}
-.tour-link {
-  text-align: center;
-}
-@media screen and (min-width: 768px) {
-  .featured-center {
     display: flex;
     justify-content: space-between;
     flex-wrap: wrap;
-  }
-  .tour-card {
-    flex: 0 0 calc(50% - 1rem);
-  }
+}
+.tour-details p {
+    line-height: 0.2;
+    letter-spacing: 0.02rem;
+    color: var(--darkgrey);
+    text-transform: capitalize;
+}
+.tour-country {
+    align-self: center;
+}
+.tour-link {
+    text-align: center;
+}
+@media screen and (min-width: 768px) {
+    .featured-center {
+        display: flex;
+        justify-content: space-between;
+        flex-wrap: wrap;
+    }
+    .tour-card {
+        flex: 0 0 calc(50% - 1rem);
+    }
 }
 @media screen and (min-width: 1170px) {
-  .tour-card {
-    flex: 0 0 calc(33.333333% - 1rem);
-  }
+    .tour-card {
+        flex: 0 0 calc(33.333333% - 1rem);
+    }
 }
 /******************** end of featured tours*******************/
 /******************** gallery*******************/
 .gallery {
-  background: var(--darkgrey);
+    background: var(--darkgrey);
 }
 .gallery-img-container {
-  position: relative;
-  background: var(--primarycolor);
+    position: relative;
+    background: var(--primarycolor);
 }
 .gallery-icon {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  font-size: 2.5rem;
-  color: var(--mainwhite);
-  transform: translate(-50%, -50%);
-  cursor: pointer;
-  opacity: 0;
-  transition: var(--maintransition);
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    font-size: 2.5rem;
+    color: var(--mainwhite);
+    transform: translate(-50%, -50%);
+    cursor: pointer;
+    opacity: 0;
+    transition: var(--maintransition);
 }
 .gallery-img {
-  transition: var(--maintransition);
+    transition: var(--maintransition);
 }
 .gallery-img-container:hover .gallery-img {
-  opacity: 0.5;
+    opacity: 0.5;
 }
 .gallery-img-container:hover .gallery-icon {
-  opacity: 1;
+    opacity: 1;
 }
 @media screen and (min-width: 768px) {
-  .gallery-center {
-    display: flex;
-    flex-wrap: wrap;
-  }
-  .gallery-img-container {
-    flex: 0 0 50%;
-  }
+    .gallery-center {
+        display: flex;
+        flex-wrap: wrap;
+    }
+    .gallery-img-container {
+        flex: 0 0 50%;
+    }
 }
 @media screen and (min-width: 992px) {
-  .gallery-img-container {
-    flex: 0 0 25%;
-  }
+    .gallery-img-container {
+        flex: 0 0 25%;
+    }
 }
 
 /******************** end of gallery*******************/
+/******************** deals*******************/
+.input-group {
+    width: 80vw;
+    max-width: 600px;
+    margin: 0 auto;
+    display: flex;
+}
+.form-control {
+    flex: 1 1 auto;
+}
+.form-control,
+.btn-submit {
+    padding: 0.375 0.75;
+    font-size: 1rem;
+    line-height: 1.5;
+    font-weight: 300;
+    letter-spacing: var(--mainspacing);
+    background: transparent;
+    outline: none;
+    text-transform: uppercase;
+    border: 2px solid var(--primarycolor);
+}
+::placeholder {
+    font-family: "Lato", sans-serif;
+    color: var(--mainblack);
+}
+.btn-submit {
+    border-left: none;
+    transition: var(--maintransition);
+    cursor: pointer;
+}
+.btn-submit:hover {
+    color: var(--mainwhite);
+    background: var(--primarycolor);
+}
+/******************** end of deals*******************/
+/******************** footer*******************/
+.footer {
+    background: var(--mainblack);
+    color: var(--mainwhite);
+    text-align: center;
+    padding-left: 2rem;
+    padding-right: 2rem;
+}
+.footer-links,
+.footer-icons {
+    display: flex;
+    justify-content: center;
+    margin-bottom: 1.5rem;
+    flex-wrap: wrap;
+}
+.footer-link {
+    color: var(--mainwhite);
+    font-size: 1.1rem;
+    margin-right: 1rem;
+    text-transform: capitalize;
+    letter-spacing: var(--mainspacing);
+    transition: var(--maintransition);
+}
+.footer-link:hover {
+    color: var(--primarycolor);
+}
+.footer-icon {
+    color: var(--mainwhite);
+    font-size: 1.9rem;
+    margin-right: 1rem;
+    transition: var(--maintransition);
+}
+.footer-icon:hover {
+    color: var(--primarycolor);
+    transform: translateY(-10%);
+}
+.copyright {
+    text-transform: capitalize;
+    letter-spacing: var(--mainspacing);
+}
+/******************** end of footer*******************/
+/******************** navbar*******************/
+.nav-icons {
+    display: none;
+}
+.nav-header {
+    padding: 1rem 2rem;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+.nav-toggle {
+    background: transparent;
+    border: none;
+    outline: none;
+    font-size: 1.5rem;
+    cursor: pointer;
+    color: var(--primarycolor);
+    transition: var(--maintransition);
+}
+.nav-toggle:hover {
+    transform: scale(1.2);
+}
+.nav-link {
+    display: block;
+    padding: 1rem 2rem;
+    color: var(--mainblack);
+    font-weight: bold;
+    text-transform: capitalize;
+    letter-spacing: var(--mainspacing);
+    transition: var(--maintransition);
+}
+.nav-link:hover {
+    background: var(--darkgrey);
+    color: var(--primarycolor);
+    padding-left: 2.5rem;
+}
+.nav-links {
+    height: 0;
+    overflow: hidden;
+    transition: var(--maintransition);
+}
+.show-links {
+    height: 44.8vh;
+}
+@media screen and (min-width: 992px) {
+    .nav-toggle {
+        display: none;
+    }
+    .nav-links {
+        display: flex;
+        height: auto;
+    }
+    .nav-icons {
+        display: flex;
+    }
+    .nav-center {
+        display: flex;
+        max-width: 1170px;
+        justify-content: space-between;
+        margin: 0 auto;
+        align-items: center;
+        flex-wrap: wrap;
+    }
+    .nav-header {
+        padding: 0;
+    }
+    .nav-link {
+        padding: 0;
+    }
+    .nav-link:hover {
+        padding: 0;
+        background: transparent;
+    }
+    .navbar {
+        padding: 1rem 2rem;
+    }
+    .nav-center {
+        width: 100%;
+    }
+    .nav-link {
+        margin-right: 0.7rem;
+    }
+    .nav-icon {
+        color: var(--primarycolor);
+        margin-right: 0.7rem;
+        font-size: 1.2rem;
+        transition: var(--maintransition);
+    }
+    .nav-icon:hover {
+        color: var(--darkgrey);
+        transform: translateY(-10%);
+    }
+}
+/******************** end of navbar*******************/
+/* fixed navbar */
+.fixed {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    background: var(--maingrey);
+    transition: var(--maintransition);
+    box-shadow: var(--lightshadow);
+    z-index: 1;
+}
